fix(scss): force gpu acceleration rendering on ios

--- a/packages/styles/scss/patterns/sub-patterns/layout/_layout.scss
+++ b/packages/styles/scss/patterns/sub-patterns/layout/_layout.scss
@@ -14,6 +14,7 @@
         position: sticky;
         top: 0;
         z-index: 1;
+        transform: translate3d(0, 0, 0);
       }
     }
 
